# pdf2md

./: README.md  main.py  pyproject.toml
.github/workflows/: publish-pypi.yml
pdf2dotmd/: __init__.py  converter.py  table_processor.py
pdf2md/: cli.py  image_extractor.py  layout_analyzer.py  page_processor.py  text_block.py
scripts/: bump_version.py
