[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2md"
version = "0.0.1"
description = "A Python tool for converting PDF files to Markdown"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "hnrobert" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
dependencies = ["pdfplumber>=0.11.0"]

[project.urls]
Homepage = "https://github.com/HNRobert/pdf2md"
Repository = "https://github.com/HNRobert/pdf2md"

[project.scripts]
pdf2md = "pdf2md.cli:main"

[tool.setuptools.packages.find]
include = ["pdf2md*"]
